tests/NormalTests/paczka1/fuzzy1/87227110.err
Error in line 1: S426 A746 88,2
Error in line 8: CsBIux A321 33,5
Error in line 7: omEeoo A746 67,1
Error in line 17: S426 S32 15,8
Error in line 25: S426 S426 2,4
Error in line 19: P4G S426 49,9
Error in line 32: omEeoo A746 64,0
